--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 
 /* sticky footer styling */
 
-/* https://css-tricks.com/snippets/css/sticky-footer/ */
+https://css-tricks.com/snippets/css/sticky-footer/
 
 html,
 body {
